# sqlflow

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ARCHITECTURAL_CLEANUP_PLAN.md  CHANGELOG.md  CLI_REFACTORING_TECHNICAL_DESIGN.md  COMMIT_MESSAGE.md  CONTRIBUTING.md  INSTALLATION.md  LOAD_MODES_IMPLEMENTATION_SUMMARY.md  PHASE_3_COMPLETION_REPORT.md  PIPELINE_FAILURE_HANDLING_FIX.md  PR.md  README.md  REFACTORING_SUMMARY.md  RESTORATION_PLAN.md  SQLFlow Feature Implementation Plan- Conditional Execution & Python UDFs.md  SQLFlow Full Load, Incremental Loading, Schema Management, and Full Lifecycle.md  SQLFlow Roadmap - Stakeholder One-Pager.md  SQLFlow_Implementation_Update.md  STRATEGIC_FIX_PLAN.md  TESTING_INTEGRATION_CHANGES.md  VARIABLE_SUBSTITUTION_REFACTOR_PLAN.md  VARIABLE_SUBSTITUTION_REFACTOR_TECHNICAL_DESIGN.md  coding_rules.json  debug_connect.py  fast_debugger.py  fix_var_spaces.py  google_sheets_connector_implementation.md  implementation_timeline_plan.md  pyproject.toml  release.py  release_to_pypi.sh  run_all_examples.sh  run_connector_integration_tests.sh  run_integration_tests.sh  setup.cfg  setup.py  sqlflow_connector_implementation_tasks.md  sqlflow_connector_performance_optimization_plan.md  (+6 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/instructions/: code_style.instructions.md  debug.instructions.md  engineering_principals.instructions.md  logging.instructions.md  testing_standard.instructions.md
.github/workflows/: auto-approve-pr.yml  ci.yml  command-dispatch.yml  comment-triggered-tests.yml  release-pypi.yml  release-testpypi.yml
data/: sample.csv
demos/ecommerce_demo/: Dockerfile  Dockerfile.multistage  QUICKSTART.md  README.md  docker-compose.yml  init-demo.sh  requirements.txt  sqlflow.yml  start-demo.sh
demos/udf_demo/: README.md
docs/: CI_TRIGGER_GUIDE.md  DEVELOPER_ADVOCATE_REVIEW.md  DOCUMENTATION_PLAN.md  DOCUMENTATION_REORGANIZATION_PLAN.md  README.md  RELEASE_PROCESS.md  V2_EXECUTOR_DESIGN.md  V2_EXECUTOR_IMPLEMENTATION_PLAN.md  architecture.md  cli_guide.md  conditionals.md  getting_started.md  installation.md  python_udfs.md  quickstart.md  style_guide.md  syntax.md  udf_default_parameters.md
docs/assets/: release_diagram.md  release_process_flowchart.md
docs/comparison/: vs_dbt.md
docs/developer/: contributing.md  testing.md
docs/developer-guides/: README.md  SOURCE_CODE_VERIFICATION_REPORT.md  architecture-deep-dive.md  architecture-overview.md  building-connectors.md  building-transforms.md  building-udfs.md  contributing.md  enhanced-connector-registry.md  extending-sqlflow.md  profile-enhancement.md  state-management.md  table-udf-bug-fix-summary.md  technical-overview.md  udf-system.md  v2_refactoring_plan.md  variable-substitution-architecture.md  variable-substitution-guide.md  variables-v2-technical-design.md
docs/getting-started/: installation.md  quickstart.md
docs/migration/: variable-parsing-migration.md
docs/reference/: cli-commands.md  connectors.md  profiles.md  sqlflow-syntax.md  udfs.md
docs/release_management/: GITHUB_RELEASE_TEMPLATE.md  MVP_RELEASE_PLAN.md  QUICK_GUIDE.md  RELEASE_CHECKLIST.md
docs/roadmap/: current-features.md
docs/technical/: SQLFlow Feature Implementation Plan- Conditional Execution & Python UDFs.md  technical_design_document.md
docs/testing/: index.md
docs/tutorials/: README.md  business_to_pipeline.md
docs/user/: concepts.md  getting_started.md
docs/user-guides/: building-analytics-pipelines.md  connecting-data-sources.md  troubleshooting.md
examples/: v2_executor_demo.py  week9_10_performance_demo.py
examples/conditional_pipelines/: environment_based.sf  feature_flags.sf  nested_conditions.sf  run.sh
examples/connector_interface_demo/: run_demo.sh
examples/ecommerce/: Dockerfile  QUICKSTART.md  README.md  build-sqlflow-package.sh  init-demo.sh  start-demo.sh
examples/google_sheets_demo/: README.md  run_demo.sh
examples/incremental_loading_demo/: README.md  run_demo.sh
examples/load_modes/: README.md  basic_load_modes.sf  run.sh  schema_compatibility.sf
examples/parquet_demo/: README.md  create_sample_data.py  run_demo.sh
examples/phase2_integration_demo/: .dockerignore  CLEANUP_SUMMARY.md  DOCUMENTATION_INDEX.md  Dockerfile  NAMING_CONVENTIONS.md  PROJECT_STRUCTURE.md  README.md  RESILIENCE_DEMO.md  TROUBLESHOOTING_GUIDE.md  docker-compose.yml  quick_start.sh  run_demo.py  test_export.sf  test_s3_verification.py
examples/python_udfs/: example_udf.py  udf_demo.sf
examples/rest_demo/: README.md  run_demo.sh
examples/shopify_ecommerce_analytics/: CHANGELOG.md  PHASE2_DAY4_SUMMARY.md  QUICKSTART.md  README.md  run_shopify_test.sh  setup_shopify_dev_store.sh  test_shopify_connector.sh
examples/transform_layer_demo/: README.md  run_demo.sh
examples/udf_examples/: README.md  demonstrate_advanced_processing.py  demonstrate_table_udf_alternatives.py  run.sh  run_udf_examples_demo.sh  showcase_python_udfs.sh
examples/variable_substitution/: README.md  basic_substitution.py  priority_resolution.py  run_examples.sh
pipelines/: udf_test.sf
profiles/: README.md  dev.yml
python_udfs/: sample_udfs.py
scripts/: run_integration_tests.sh
sqlflow/: __init__.py  exceptions.py  logging.py  main.py  project.py
sqlflow/cli/: advanced_display.py  advanced_integration.py  business_operations.py  connect.py  display.py  errors.py  factories.py  main.py  pipeline.py  pipeline_operations.py  utils.py  validation_cache.py  validation_helpers.py  variable_handler.py
sqlflow/connectors/: DESTINATION_DESIGN.md  README.md  RESILIENCE_INTEGRATION_DESIGN.md  __init__.py  base.py  connector_engine.py  csv_connector.py  csv_export_connector.py  data_chunk.py  google_sheets_connector.py  postgres_connector.py  postgres_export_connector.py  postgres_placeholder.py  registry.py  resilience.py  resilience_profiles.py  rest_connector.py  s3_connector.py  shopify_connector.py
sqlflow/core/: config_resolver.py  dependencies.py  evaluator.py  planner.py  planner_main.py  profile_schema.py  (+4 more)
tests/: __init__.py  conftest.py  test_variable_validation.py
(+828 files in other folders)
